IWS_1st/IWS/API/Litecad.h

// Color from string
BOOL   LCAPI lcColorIsRGB      (LPCWSTR szColor);
int    LCAPI lcColorGetRed     (LPCWSTR szColor);
 
int    LCAPI lcColorGetGreen   (LPCWSTR szColor);
int    LCAPI lcColorGetBlue    (LPCWSTR szColor);
int    LCAPI lcColorGetIndex   (LPCWSTR szColor);
BOOL   LCAPI lcColorToVal      (LPCWSTR szColor, int* pbRGB, int* pIndex, int* pR,int* pG,int* pB);
// Color palette
BOOL   LCAPI lcColorSetPalette  (int Index, int R,int G,int B);
BOOL   LCAPI lcColorGetPalette  (int Index, int* pR,int* pG,int* pB);
BOOL   LCAPI lcColorSavePalette (LPCWSTR szFileName, HANDLE hWnd);
BOOL   LCAPI lcColorLoadPalette (LPCWSTR szFileName, HANDLE hWnd);
// Image
BOOL   LCAPI lcImageSetPixelRGB (HANDLE hImage, int X, int Y, int Red, int Green, int Blue);
      
BOOL   LCAPI lcImageSetPixelI   (HANDLE hImage, int X, int Y, int iColor);
                        
BOOL   LCAPI lcImageGetPixelRGB (HANDLE hImage, int X, int Y, int* pRed, int* pGreen, int* pBlue);
BOOL   LCAPI lcImageGetPixelI   (HANDLE hImage, int X, int Y, int* piColor);
                      
BOOL   LCAPI lcImageSetPalColor (HANDLE hImage, int iColor, int Red, int Green, int Blue);
        
BOOL   LCAPI lcImageGetPalColor (HANDLE hImage, int iColor, int* pRed, int* pGreen, int* pBlue);
  
BOOL   LCAPI lcImageLoad        (HANDLE hImage, LPCWSTR szFilename, HANDLE hWnd);
BOOL   LCAPI lcImageLoadDIB     (HANDLE hImage, HANDLE hDib2);  // undoc
BOOL   LCAPI lcImageLoadCamera  (HANDLE hImage);
BOOL   LCAPI lcImageCopyQuad    (HANDLE hImage, HANDLE hImageSrc, UINT W, UINT H, double x0, double y0, double x1, double y1, double x2, double y2, double x3, double y3);  // undoc
BOOL   LCAPI lcImageProc        (HANDLE hImage, int Mode);
// Toolbar Window

// Misc
BOOL   LCAPI lcFilletSetLines  (double L1x0, double L1y0, double L1x1, double L1y1, double L2x0, double L2y0, double L2x1, double L2y1);
BOOL   LCAPI lcFillet          (double Rad, double Bis, double Tang);  // undoc
BOOL   LCAPI lcFilletGetPoint  (int iPnt, double* pX, double* pY);
// explode entity to polylines, Flags is LC_EXP_ALL or other
int    LCAPI lcExpEntity    (HANDLE hEnt, int Flags, BOOL bUnrotate);
int    LCAPI lcExpGetPline  (double Delta);
BOOL   LCAPI lcExpGetVertex (double* pX, double* pY);
BOOL LCAPI lcGbrLoad  (HANDLE hLcWnd, LPCWSTR szFileName0);
BOOL LCAPI lcGbrClose (HANDLE hLcWnd);
LPCWSTR LCAPI lcPlugGetOption  (LPCWSTR szFileName, LPCWSTR szKey);
BOOL    LCAPI lcPlugGetOption2 (LPCWSTR szFileName, LPCWSTR szKey);
BOOL    LCAPI lcPlugSetOption  (LPCWSTR szFileName, LPCWSTR szKey, LPCWSTR szValue, BOOL bSave);
int  LCAPI lcPrintSetup  (HANDLE hWnd);
BOOL LCAPI lcPrintLayout (HANDLE hBlock);
BOOL LCAPI lcPrintBlock  (HANDLE hBlock, double X, double Y, double W, double H, double Scale, double PapLef, double PapTop, int Options);
HANDLE LCAPI lcXDataBegin ();
int    LCAPI lcXDataEnd   (HANDLE hData);
BOOL   LCAPI lcXDataClear (HANDLE hData);
BOOL   LCAPI lcXDataSet   (HANDLE hData);
BOOL LCAPI lcMru_EnableFileExt (LPCWSTR szFileExt);
BOOL LCAPI lcMru_Load          (LPCWSTR szFileName);
BOOL LCAPI lcMru_Save          ();
BOOL LCAPI lcMru_AddFile       (LPCWSTR szFileName, BOOL bFileHasView);
BOOL LCAPI lcMru_SetImage      (LPCWSTR szFileName, BYTE* pImgBuf, int ImgSize);
BOOL LCAPI lcMru_HasImage      (LPCWSTR szFileName);
BOOL LCAPI lcMru_SetViewRect   (LPCWSTR szFileName, double Xmin, double Ymin, double Xmax, double Ymax);
BOOL LCAPI lcMru_GetViewRect   (LPCWSTR szFileName, double* pXmin, double* pYmin, double* pXmax, double* pYmax);
BOOL LCAPI lcMru_Dialog        (HWND hWnd, HANDLE hIcon, WCHAR* szFileName);
// NoDB mode ////////////////////////////////////////////////////////////////////////////////////////

// Window Tabs
BOOL   LCAPI lcWndTabClear  (HANDLE hLcWnd);
BOOL   LCAPI lcWndTabAdd    (HANDLE hLcWnd, int TabID, LPCWSTR szLabel, LPCWSTR szTipText, HANDLE hObject);
BOOL   LCAPI lcWndTabSelect (HANDLE hLcWnd, int TabID);
// Paper
BOOL   LCAPI lcWndPaperEnable   (HANDLE hLcWnd, BOOL bEnable);
BOOL   LCAPI lcWndPaperSetSize  (HANDLE hLcWnd, int Size, int Orient);
BOOL   LCAPI lcWndPaperSetSize2 (HANDLE hLcWnd, double Width, double Height);
BOOL   LCAPI lcWndPaperSetPos   (HANDLE hLcWnd, double Left, double Bottom);
// Grips
BOOL   LCAPI lcGripClear   (HANDLE hLcWnd);
BOOL   LCAPI lcGripAdd     (HANDLE hLcWnd, HANDLE hObj, int iGrip, int Typ, double X, double Y, double Ang, double X0, double Y0);
BOOL   LCAPI lcGripSet     (HANDLE hLcWnd, HANDLE hObj, int iGrip, double X, double Y, double Ang, double X0, double Y0);
// to draw inside of Paint event procedure
HANDLE LCAPI lcPaint_PenCreate     (HANDLE hLcWnd, int Id, COLORREF Color, double Width, int PenStyle);
BOOL   LCAPI lcPaint_PenSelect     (HANDLE hLcWnd, HANDLE hPen);
BOOL   LCAPI lcPaint_PenSelectID   (HANDLE hLcWnd, int IdPen);
HANDLE LCAPI lcPaint_BrushCreate   (HANDLE hLcWnd, int Id, COLORREF Color, int Pattern, int Alpha);
BOOL   LCAPI lcPaint_BrushSelect   (HANDLE hLcWnd, HANDLE hBrush);
BOOL   LCAPI lcPaint_BrushSelectID (HANDLE hLcWnd, int IdBrush);
BOOL   LCAPI lcPaint_DrawPtbuf   (HANDLE hLcWnd, HANDLE hPtbuf, BOOL bClosed);
BOOL   LCAPI lcPaint_DrawMpgon   (HANDLE hLcWnd, HANDLE hMpgon, BOOL bFill, BOOL bBorder);
BOOL   LCAPI lcPaint_DrawImage   (HANDLE hLcWnd, HANDLE hImage, double X, double Y, double PixelSize, int Transp, int TVal, HANDLE hPtbuf);
BOOL   LCAPI lcPaint_DrawImage2  (HANDLE hLcWnd, HANDLE hImage, double X, double Y, double W, double H, int Transp, int TVal, HANDLE hPtbuf);
BOOL   LCAPI lcPaint_DrawText    (HANDLE hLcWnd, double X, double Y, LPCWSTR szText);
BOOL   LCAPI lcPaint_DrawText2   (HANDLE hLcWnd, double X1, double Y1, double X2, double Y2, int Align, LPCWSTR szText);
BOOL   LCAPI lcPaint_DrawTextBC  (HANDLE hLcWnd, HANDLE hMpgon, double Gap, double Height, int Align, LPCWSTR szText);
BOOL   LCAPI lcPaint_DrawArcText (HANDLE hLcWnd, LPCWSTR szText, double X, double Y, double Rad, double Ang0, BOOL bCW, double H, double WScale, int Align);
 
BOOL   LCAPI lcPaint_DrawHatch   (HANDLE hLcWnd, HANDLE hHatch);
BOOL   LCAPI lcPaint_DrawPoint   (HANDLE hLcWnd, double X, double Y, int PtMode, double PtSize);
 
BOOL   LCAPI lcPaint_DrawLine    (HANDLE hLcWnd, double X1, double Y1, double X2, double Y2);
 
BOOL   LCAPI lcPaint_DrawXline   (HANDLE hLcWnd, double X, double Y, double Angle, BOOL bRay);
BOOL   LCAPI lcPaint_DrawRect    (HANDLE hLcWnd, double Xc, double Yc, double Width, double Height);
BOOL   LCAPI lcPaint_DrawRect2   (HANDLE hLcWnd, double X1, double Y1, double X2, double Y2);
BOOL   LCAPI lcPaint_DrawPickBox (HANDLE hLcWnd);
BOOL   LCAPI lcPaint_DrawTIN     (HANDLE hLcWnd, HANDLE hTIN);
BOOL   LCAPI lcPaint_DrawGrid    (HANDLE hLcWnd, HANDLE hGrid, BOOL bDest, COLORREF ColLine, COLORREF ColNode);
BOOL   LCAPI lcPaint_DrawCPrompt (HANDLE hLcWnd, int X, int Y, int Align, LPCWSTR szText);
void   LCAPI lcPaint_SetPixel    (HANDLE hDC, int X, int Y, COLORREF Color);
// Points buffer 
HANDLE LCAPI lcPaint_CreatePtbuf     ();
BOOL   LCAPI lcPaint_DeletePtbuf     (HANDLE hPtbuf);
BOOL   LCAPI lcPaint_PtbufClear      (HANDLE hPtbuf);
BOOL   LCAPI lcPaint_PtbufAddPoint   (HANDLE hPtbuf, double X, double Y, double Prm1, double Prm2, int IntPrm);
BOOL   LCAPI lcPaint_PtbufAddPoint2  (HANDLE hPtbuf, double X, double Y);
BOOL   LCAPI lcPaint_PtbufAddPointP  (HANDLE hPtbuf, double Angle, double Dist);
BOOL   LCAPI lcPaint_PtbufAddLine    (HANDLE hPtbuf, double X1, double Y1, double X2, double Y2);
BOOL   LCAPI lcPaint_PtbufAddLineP   (HANDLE hPtbuf, double X, double Y, double Angle, double Dist);
BOOL   LCAPI lcPaint_PtbufAddCircle  (HANDLE hPtbuf, double Xc, double Yc, double R, int Resol);
BOOL   LCAPI lcPaint_PtbufAddCircle2 (HANDLE hPtbuf, double X1, double Y1, double X2, double Y2, int Resol);
BOOL   LCAPI lcPaint_PtbufAddCircle3 (HANDLE hPtbuf, double X1, double Y1, double X2, double Y2, double X3, double Y3, BOOL bInside, int Resol);
BOOL   LCAPI lcPaint_PtbufAddArc     (HANDLE hPtbuf, double Xc, double Yc, double R, double StartAngle, double ArcAngle, int Resol);