IWS_1st_No2DInsp/IWS/API/Litecad.pas

Function lcColorIsRGB (szColor: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcColorGetRed (szColor: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcColorGetGreen (szColor: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcColorGetBlue (szColor: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcColorGetIndex (szColor: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcColorToVal (szColor: PWideChar; pbRGB: Pinteger; pIndex: Pinteger; pR: Pinteger; pG: Pinteger; pB: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcColorSetPalette (Index: Integer; R: Integer; G: Integer; B: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcColorGetPalette (Index: Integer; pR: Pinteger; pG: Pinteger; pB: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcColorSavePalette (szFileName: PWideChar; hWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcColorLoadPalette (szFileName: PWideChar; hWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcImageSetPixelRGB (hImage: IntPtr; X: Integer; Y: Integer; Red: Integer; Green: Integer; Blue: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcImageSetPixelI (hImage: IntPtr; X: Integer; Y: Integer; iColor: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcImageGetPixelRGB (hImage: IntPtr; X: Integer; Y: Integer; pRed: Pinteger; pGreen: Pinteger; pBlue: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcImageGetPixelI (hImage: IntPtr; X: Integer; Y: Integer; piColor: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcImageSetPalColor (hImage: IntPtr; iColor: Integer; Red: Integer; Green: Integer; Blue: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcImageGetPalColor (hImage: IntPtr; iColor: Integer; pRed: Pinteger; pGreen: Pinteger; pBlue: Pinteger): Integer; stdcall; external 'Litecad64.dll';
Function lcImageLoad (hImage: IntPtr; szFilename: PWideChar; hWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcImageLoadDIB (hImage: IntPtr; hDib2: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcImageLoadCamera (hImage: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcImageCopyQuad (hImage: IntPtr; hImageSrc: IntPtr; W: Integer; H: Integer; x0: Double; y0: Double; x1: Double; y1: Double; x2: Double; y2: Double; x3: Double; y3: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcImageProc (hImage: IntPtr; Mode: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcFilletSetLines (L1x0: Double; L1y0: Double; L1x1: Double; L1y1: Double; L2x0: Double; L2y0: Double; L2x1: Double; L2y1: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcFillet (Rad: Double; Bis: Double; Tang: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcFilletGetPoint (iPnt: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcExpEntity (hEnt: IntPtr; Flags: Integer; bUnrotate: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcExpGetPline (Delta: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcExpGetVertex (pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcGbrLoad (hLcWnd: IntPtr; szFileName0: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcGbrClose (hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPlugGetOption (szFileName: PWideChar; szKey: PWideChar): PWideChar; stdcall; external 'Litecad64.dll';
Function lcPlugGetOption2 (szFileName: PWideChar; szKey: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcPlugSetOption (szFileName: PWideChar; szKey: PWideChar; szValue: PWideChar; bSave: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPrintSetup (hWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPrintLayout (hBlock: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPrintBlock (hBlock: IntPtr; X: Double; Y: Double; W: Double; H: Double; Scale: Double; PapLef: Double; PapTop: Double; Options: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcXDataBegin : IntPtr; stdcall; external 'Litecad64.dll';
Function lcXDataEnd (hData: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcXDataClear (hData: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcXDataSet (hData: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcMru_EnableFileExt (szFileExt: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcMru_Load (szFileName: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcMru_Save : Integer; stdcall; external 'Litecad64.dll';
Function lcMru_AddFile (szFileName: PWideChar; bFileHasView: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcMru_SetImage (szFileName: PWideChar; pImgBuf: Pointer; ImgSize: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcMru_HasImage (szFileName: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcMru_SetViewRect (szFileName: PWideChar; Xmin: Double; Ymin: Double; Xmax: Double; Ymax: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcMru_GetViewRect (szFileName: PWideChar; pXmin: Pdouble; pYmin: Pdouble; pXmax: Pdouble; pYmax: Pdouble): Integer; stdcall; external 'Litecad64.dll';
Function lcMru_Dialog (hWnd: IntPtr; hIcon: IntPtr; szFileName: Pointer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndTabClear (hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcWndTabAdd (hLcWnd: IntPtr; TabID: Integer; szLabel: PWideChar; szTipText: PWideChar; hObject: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcWndTabSelect (hLcWnd: IntPtr; TabID: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndPaperEnable (hLcWnd: IntPtr; bEnable: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndPaperSetSize (hLcWnd: IntPtr; Size: Integer; Orient: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcWndPaperSetSize2 (hLcWnd: IntPtr; Width: Double; Height: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcWndPaperSetPos (hLcWnd: IntPtr; Left: Double; Bottom: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcGripClear (hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcGripAdd (hLcWnd: IntPtr; hObj: IntPtr; iGrip: Integer; Typ: Integer; X: Double; Y: Double; Ang: Double; X0: Double; Y0: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcGripSet (hLcWnd: IntPtr; hObj: IntPtr; iGrip: Integer; X: Double; Y: Double; Ang: Double; X0: Double; Y0: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PenCreate (hLcWnd: IntPtr; Id: Integer; Color: IntPtr; Width: Double; PenStyle: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_PenSelect (hLcWnd: IntPtr; hPen: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PenSelectID (hLcWnd: IntPtr; IdPen: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_BrushCreate (hLcWnd: IntPtr; Id: Integer; Color: IntPtr; Pattern: Integer; Alpha: Integer): IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_BrushSelect (hLcWnd: IntPtr; hBrush: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_BrushSelectID (hLcWnd: IntPtr; IdBrush: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawPtbuf (hLcWnd: IntPtr; hPtbuf: IntPtr; bClosed: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawMpgon (hLcWnd: IntPtr; hMpgon: IntPtr; bFill: Integer; bBorder: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawImage (hLcWnd: IntPtr; hImage: IntPtr; X: Double; Y: Double; PixelSize: Double; Transp: Integer; TVal: Integer; hPtbuf: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawImage2 (hLcWnd: IntPtr; hImage: IntPtr; X: Double; Y: Double; W: Double; H: Double; Transp: Integer; TVal: Integer; hPtbuf: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawText (hLcWnd: IntPtr; X: Double; Y: Double; szText: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawText2 (hLcWnd: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; Align: Integer; szText: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawTextBC (hLcWnd: IntPtr; hMpgon: IntPtr; Gap: Double; Height: Double; Align: Integer; szText: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawArcText (hLcWnd: IntPtr; szText: PWideChar; X: Double; Y: Double; Rad: Double; Ang0: Double; bCW: Integer; H: Double; WScale: Double; Align: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawHatch (hLcWnd: IntPtr; hHatch: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawPoint (hLcWnd: IntPtr; X: Double; Y: Double; PtMode: Integer; PtSize: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawLine (hLcWnd: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawXline (hLcWnd: IntPtr; X: Double; Y: Double; Angle: Double; bRay: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawRect (hLcWnd: IntPtr; Xc: Double; Yc: Double; Width: Double; Height: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawRect2 (hLcWnd: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawPickBox (hLcWnd: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawTIN (hLcWnd: IntPtr; hTIN: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawGrid (hLcWnd: IntPtr; hGrid: IntPtr; bDest: Integer; ColLine: IntPtr; ColNode: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_DrawCPrompt (hLcWnd: IntPtr; X: Integer; Y: Integer; Align: Integer; szText: PWideChar): Integer; stdcall; external 'Litecad64.dll';
Procedure lcPaint_SetPixel (hDC: IntPtr; X: Integer; Y: Integer; Color: IntPtr); stdcall; external 'Litecad64.dll';
Function lcPaint_CreatePtbuf : IntPtr; stdcall; external 'Litecad64.dll';
Function lcPaint_DeletePtbuf (hPtbuf: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufClear (hPtbuf: IntPtr): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddPoint (hPtbuf: IntPtr; X: Double; Y: Double; Prm1: Double; Prm2: Double; IntPrm: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddPoint2 (hPtbuf: IntPtr; X: Double; Y: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddPointP (hPtbuf: IntPtr; Angle: Double; Dist: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddLine (hPtbuf: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddLineP (hPtbuf: IntPtr; X: Double; Y: Double; Angle: Double; Dist: Double): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddCircle (hPtbuf: IntPtr; Xc: Double; Yc: Double; R: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddCircle2 (hPtbuf: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddCircle3 (hPtbuf: IntPtr; X1: Double; Y1: Double; X2: Double; Y2: Double; X3: Double; Y3: Double; bInside: Integer; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
Function lcPaint_PtbufAddArc (hPtbuf: IntPtr; Xc: Double; Yc: Double; R: Double; StartAngle: Double; ArcAngle: Double; Resol: Integer): Integer; stdcall; external 'Litecad64.dll';
